tests/machine/x/erlang/group_by_having.error
exit status 127
tests/machine/x/erlang_new/group_by_having.erl:6:219: syntax error before: '}'
escript: There were compilation errors.
